tests/ui/unstable-features/marker_trait_attr.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Foo<_>`:
  --> $DIR/marker_trait_attr.rs:12:1
   |
12 | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
...
19 | impl<T> Unpin for Foo<T> {}
   | ------------------------ first implementation here
